// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Redux components Bulk redux components for should work correctly 1`] = `
Object {
  "a": Object {
    "Array_push": [Function],
    "Array_remove": [Function],
    "Array_replace": [Function],
    "Array_unshift": [Function],
    "Delete": Object {
      "type": "PREFIX_delete_a",
    },
    "Map": [Function],
    "Set": [Function],
  },
  "b": Object {
    "Boolean_set_false": Object {
      "type": "PREFIX_boolean_set_false_b",
    },
    "Boolean_set_true": Object {
      "type": "PREFIX_boolean_set_true_b",
    },
    "Boolean_toggle": Object {
      "type": "PREFIX_boolean_toggle_b",
    },
    "Delete": Object {
      "type": "PREFIX_delete_b",
    },
    "Map": [Function],
    "Set": [Function],
  },
  "c": Object {
    "Delete": Object {
      "type": "PREFIX_delete_c",
    },
    "Map": [Function],
    "Object_delete_property": [Function],
    "Object_merge": [Function],
    "Object_set_property": [Function],
    "Set": [Function],
  },
  "d": Object {
    "Delete": Object {
      "type": "PREFIX_delete_d",
    },
    "Map": [Function],
    "Set": [Function],
  },
  "e": Object {
    "Delete": Object {
      "type": "PREFIX_delete_e",
    },
    "Map": [Function],
    "Set": [Function],
  },
  "f": Object {
    "Delete": Object {
      "type": "PREFIX_delete_f",
    },
    "Map": [Function],
    "Object_delete_property": [Function],
    "Object_merge": [Function],
    "Object_set_property": [Function],
    "Set": [Function],
  },
  "g": Object {
    "Boolean_set_false": Object {
      "type": "PREFIX_boolean_set_false_g",
    },
    "Boolean_set_true": Object {
      "type": "PREFIX_boolean_set_true_g",
    },
    "Boolean_toggle": Object {
      "type": "PREFIX_boolean_toggle_g",
    },
    "Delete": Object {
      "type": "PREFIX_delete_g",
    },
    "Map": [Function],
    "Set": [Function],
  },
  "h": Object {
    "Array_push": [Function],
    "Array_remove": [Function],
    "Array_replace": [Function],
    "Array_unshift": [Function],
    "Delete": Object {
      "type": "PREFIX_delete_h",
    },
    "Map": [Function],
    "Set": [Function],
  },
  "i": Object {
    "Delete": Object {
      "type": "PREFIX_delete_i",
    },
    "Map": [Function],
    "Object_delete_property": [Function],
    "Object_merge": [Function],
    "Object_set_property": [Function],
    "Set": [Function],
  },
  "j": Object {
    "Boolean_set_false": Object {
      "type": "PREFIX_boolean_set_false_j",
    },
    "Boolean_set_true": Object {
      "type": "PREFIX_boolean_set_true_j",
    },
    "Boolean_toggle": Object {
      "type": "PREFIX_boolean_toggle_j",
    },
    "Delete": Object {
      "type": "PREFIX_delete_j",
    },
    "Map": [Function],
    "Set": [Function],
  },
}
`;

exports[`Redux undo components Past state should respect limit 1`] = `
Object {
  "a": 1,
  "b": 2,
  "c": 3,
}
`;

exports[`Redux undo components Past state should respect limit 2`] = `
Array [
  Object {
    "a": 1,
    "b": 2,
  },
]
`;

exports[`Redux undo components Undo actions should work correctly 1`] = `
Object {
  "a": 1,
  "b": 2,
  "c": 4,
}
`;

exports[`Redux undo components Undo actions should work correctly 2`] = `
Array [
  Object {
    "a": undefined,
    "b": undefined,
  },
  Object {
    "a": 1,
    "b": undefined,
  },
  Object {
    "a": 1,
    "b": 2,
  },
]
`;

exports[`Redux undo components Undo actions should work correctly 3`] = `
Object {
  "a": 1,
  "b": undefined,
  "c": 4,
}
`;

exports[`Redux undo components Undo actions should work correctly 4`] = `
Array [
  Object {
    "a": undefined,
    "b": undefined,
  },
]
`;
